[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/PowerUps/PowerUp.gd" type="Script" id=1]
[ext_resource path="res://Assets/PowerUps/buff.png" type="Texture" id=2]
[ext_resource path="res://Assets/PowerUps/buff5.png" type="Texture" id=3]
[ext_resource path="res://Assets/PowerUps/buff2.png" type="Texture" id=4]

[sub_resource type="PhysicsMaterial" id=2]
rough = true
bounce = 1.0
absorbent = true

[sub_resource type="RectangleShape2D" id=3]

[node name="PowerUp" type="RigidBody2D"]
collision_layer = 16
mode = 2
physics_material_override = SubResource( 2 )
script = ExtResource( 1 )

[node name="Sprite0" type="Sprite" parent="."]
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="Sprite1" type="Sprite" parent="."]
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 4 )

[node name="Sprite2" type="Sprite" parent="."]
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
